# PathHunter

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  README.md  build.zig  build.zig.zon  pyproject.toml
src/: CMakeLists.txt  args.cpp  args.hpp  args.zig  audit.cpp  audit.hpp  audit.zig  clean.cpp  clean.hpp  clean.zig  cli.rs  display.cpp  display.hpp  display.zig  main.c  main.cpp  main.rs  main.zig  path.c  path.h  path.rs  path.zig  reg.rs  source.cpp  source.hpp  source.zig  strutil.cpp  strutil.hpp  utils.rs  utils.zig
src/pathhunter/: __main__.py  args.py  audit.py  clean.py  display.py  source.py
tests/: test_audit.py  test_display.py  test_source.py
